menu for handling multiple validations added; my-validation page structure changed

--- a/UI/src/app/modules/validation-result/components/handle-multiple-validations/handle-multiple-validations.component.html
+++ b/UI/src/app/modules/validation-result/components/handle-multiple-validations/handle-multiple-validations.component.html
@@ -1,1 +1,3 @@
-<p>handle-multiple-validations works!</p>
+<div class="card flex justify-content-center w-max">
+  <p-panelMenu [model]="items"></p-panelMenu>
+</div>
