--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -1,6 +1,9 @@
 <div class="flex">
   <div class="w-2 ml-8">
-    <qa-handle-multiple-validations *ngIf="!published"></qa-handle-multiple-validations>
+    <qa-handle-multiple-validations
+            (selectionActive)="selectionActive$.next($event)"
+            *ngIf="!published">
+    </qa-handle-multiple-validations>
   </div>
   <div class="grid w-full">
     <div class="grid col col-offset-1">
@@ -34,7 +37,7 @@
           <div class="mt-3">
             <div *ngFor="let valrun of validations  | paginate :
         {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}">
-
+              <span *ngIf="(selectionActive$|async)">Monika</span>
               <qa-validationrun-row [published]=published [validationRun]="valrun"></qa-validationrun-row>
               <br/>
             </div>
