checkboxes for choosing multiple validaitons added

--- a/UI/src/app/modules/validation-result/components/handle-multiple-validations/handle-multiple-validations.component.html
+++ b/UI/src/app/modules/validation-result/components/handle-multiple-validations/handle-multiple-validations.component.html
@@ -1,6 +1,6 @@
 <div class="card flex w-full val-side-menu">
   <div class="side-menu-header my-3 ml-2">Modify multiple validations</div>
     <p-panelMenu
-      [model]="items">
+      [model]="deleteItems">
     </p-panelMenu>
 </div>
