checkbox moved to the left side

--- a/UI/src/app/modules/validation-result/components/handle-multiple-validations/handle-multiple-validations.component.html
+++ b/UI/src/app/modules/validation-result/components/handle-multiple-validations/handle-multiple-validations.component.html
@@ -1,4 +1,4 @@
-<div class="card flex w-full val-side-menu">
+<div class="card flex w-full px-5 pb-3">
   <div class="side-menu-header my-3 ml-2">Modify multiple validations</div>
     <p-panelMenu
       [model]="deleteItems">
