--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.scss
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.scss
@@ -108,7 +108,7 @@ div {
 .side-panel-area {
   position: fixed;
   left: 5vw; /* Adjust as needed */
-  top: 40vw; /* Adjust as needed */
+  top: 40vh; /* Adjust as needed */
   display: flex;
   flex-direction: column;
   align-items: flex-end;
