--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -1,17 +1,27 @@
 
 <div class="side-panel-area">
   <qa-handle-multiple-validations
+    [validations]="validations"
+    [selectedValidationsId$]="selectedValidations$"
     (selectionActive)="handleMultipleSelection($event)"
     *ngIf="!published">
   </qa-handle-multiple-validations>
 
-  <div *ngIf="(selectionActive$|async)">
-    <p-button
-      label="Cancel"
-      icon="pi pi-ban"
-      (onClick)="closeAndCleanSelection()">
-    </p-button>
-  </div>
+<!--  <div *ngIf="(selectionActive$|async)">-->
+<!--    <p-button-->
+<!--      label="Cancel"-->
+<!--      icon="pi pi-ban"-->
+<!--      (onClick)="closeAndCleanSelection()">-->
+<!--    </p-button>-->
+<!--    <button-->
+<!--      pButton-->
+<!--      type="button"-->
+<!--      class="p-button-danger mx-2"-->
+<!--      label="Delete"-->
+<!--      icon="pi pi-trash"-->
+<!--      (click)="deleteMultipleValidations()">-->
+<!--    </button>-->
+<!--  </div>-->
 </div>
 
 <div class="grid no-gutters">
