--- a/UI/src/app/modules/validation-result/components/handle-multiple-validations/handle-multiple-validations.component.html
+++ b/UI/src/app/modules/validation-result/components/handle-multiple-validations/handle-multiple-validations.component.html
@@ -1,9 +1,9 @@
-<div class="card flex w-full px-5 pb-3">
+<div class="card flex sm:w-auto xl:px-5 lg:px-4 sm:px-2 pb-3">
   <div class="side-menu-header my-3 ml-2">Modify multiple validations</div>
     <p-panelMenu
       [model]="deleteItems">
     </p-panelMenu>
-  <div *ngIf="(selectionActive$|async)">
+  <div *ngIf="(selectionActive$|async)" class="mt-3">
     <p-button
       label="Cancel"
       icon="pi pi-ban"
