--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -9,11 +9,7 @@
 </div>
 
 <div class="grid no-gutters">
-  <div class="
-    col-12
-    md:col-10 md:col-offset-1
-    lg:col-10 lg:col-offset-1
-    xl:col-8 xl:col-offset-2">
+  <div [ngClass]="published ? publishedValClasses : myValClasses">
     <div class="grid" style="justify-content: center">
 
       <!-- custom -->
