Remove multiple validation (#725)
* a new component for handling multiple validations added

* menu for handling multiple validations added; my-validation page structure changed

* side menu added to my-validations page

* draft structure addedto the side menu

* checkboxes for choosing multiple validaitons added

* selecting by group removed

* checkbox moved to the left side

* typo fixed

* proper message send when the file can not be preprocess due to too long variable name

* selecting validations updated to work asynchronously

* handling actions moved to the handle-multiple-validations.component as they belong there

* deleting multiple validations added

* styling adjusted to smaller screens

* view updated to ensure that no published and archived validation is removed

* unit test added for new view

--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -1,9 +1,15 @@
+
+<div class="side-panel-area">
+  <qa-handle-multiple-validations
+    [validations]="validations"
+    [selectedValidationsId$]="selectedValidations$"
+    (selectionActive)="handleMultipleSelection($event)"
+    *ngIf="!published">
+  </qa-handle-multiple-validations>
+</div>
+
 <div class="grid no-gutters">
-  <div class="
-    col-12
-    md:col-10 md:col-offset-1
-    lg:col-10 lg:col-offset-1
-    xl:col-8 xl:col-offset-2">
+  <div [ngClass]="published ? publishedValClasses : myValClasses">
     <div class="grid" style="justify-content: center">
 
       <!-- custom -->
@@ -27,14 +33,24 @@
       </div>
 
       <div *ngIf="validations.length" class="col-9">
-          <qa-sorting-form (orderQueryName)="getOrder($event)"></qa-sorting-form>
+        <qa-sorting-form (orderQueryName)="getOrder($event)"></qa-sorting-form>
       </div>
 
       <!-- Rows -->
       <div *ngIf="validations.length" class="col-9">
         <div *ngFor="let valrun of validations  | paginate :
-        {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}">
-
+        {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}"
+             class="validation-row-area">
+<!--          <div *ngIf="(selectionActive$|async)">-->
+            <p-checkbox
+              class="modify-checkbox"
+              *ngIf="(selectionActive$|async) && valrun.is_unpublished && !valrun.is_archived"
+              [value]="valrun.id"
+              [ngModel]="selectedValidations$ | async"
+              (ngModelChange)="updateSelectedValidations($event, valrun.id)"
+              inputId="{{valrun.id}}}">
+            </p-checkbox>
+<!--          </div>-->
           <qa-validationrun-row [published]=published [validationRun]="valrun"></qa-validationrun-row>
           <br/>
         </div>
@@ -74,3 +90,6 @@
     </div>
   </div>
 </div>
+
+
+
