--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.scss
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.scss
@@ -105,9 +105,25 @@ div {
   justify-content: center !important;
 }
 
+.side-panel-area {
+  position: fixed;
+  left: 2vw; /* Adjust as needed */
+  top: 40vh; /* Adjust as needed */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+  //width: 20vw;
+}
+.validation-row-area{
+  position: relative;
+}
 
-
-
+.modify-checkbox{
+  position: absolute;
+  left: -30px;
+  top: 10px;
+}
 
 
 
